<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bankData"
            type="com.app.axisbankatm.room.entity.Bank" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tvATMAmountLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/label_atm_amount"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv100NotesLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_rs_100"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv200NotesLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_rs_200"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv500NotesLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_rs_500"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv2000NotesLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_rs_2000"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tvATMAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@{`Rs. `+bankData.totalAmount}"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv100Notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@{``+bankData.notesOf100}" />

                <TextView
                    android:id="@+id/tv200Notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@{``+bankData.notesOf200}" />

                <TextView
                    android:id="@+id/tv500Notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@{``+bankData.notesOf500}" />

                <TextView
                    android:id="@+id/tv2000Notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@{``+bankData.notesOf2000}" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>